--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# .gitignore for Grails 1.2 and 1.3
-
-# web application files
-/web-app/WEB-INF
-
-# IDE support files
 /.classpath
 /.launch
 /.project
@@ -11,32 +5,10 @@
 /*.launch
 /*.tmproj
 /ivy*
-/eclipse
 
-# default HSQL database files for production mode
-/prodDb.*
-
-# general HSQL database files
-*Db.properties
-*Db.script
-
-# logs
-/stacktrace.log
-/test/reports
-/logs
-
-# project release file
-/*.war
-
-# plugin release file
+*.log
 /*.zip
 
-# older plugin install locations
-/plugins
-/web-app/plugins
-/web-app/WEB-INF/classes
-
-# "temporary" build files
 /target
 
 # other
@@ -44,3 +16,5 @@
 
 /*.iml
 /.idea
+
+plugin.xml
